# basic_geospot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_backbone.py  test_swanlab.py
configs/: default.yaml  singleframe_debug.yaml  singleframe_gpu.yaml  singleframe_res.yaml  singleframe_res_BCE.yaml  singleframe_res_bottleneck.yaml  singleframe_res_debug.yaml  singleframe_res_fixed.yaml  singleframe_res_focal.yaml  singleframe_res_fusion_focal.yaml  singleframe_res_fusion_focal_trans.yaml  singleframe_res_pretrained_BCE.yaml  singleframe_train.yaml  swanlab_example.yaml
cursor_project_proj/: project_requirements.md  reflection.md  todo_list.md
cursor_project_proj/experimental_reflection/: 0626-use-P2output.md
docs/: single_frame_training.md  swanlab_integration.md
docs/technical_point/: dataloader_and_num_workers.md  pytest_introduction.md
geo_detection.egg-info/: PKG-INFO  SOURCES.txt
official/: validation.py
scripts/: README_inference.md  anno_to_pic.py  eval.py  eval_singleframe.py  inference.py  quick_gt_visualization.py  train.py  train_singleframe.py  visualize_5frame_gt.py
src/: __init__.py
src/datasets/: __init__.py  base.py  collate.py  spotgeov2.py  spotgeov2_singleframe.py  transforms.py
src/losses/: __init__.py  base.py  spotgeo.py
src/models/: __init__.py  base.py  registry.py  spotgeo.py  spotgeo_res.py  spotgeo_res_fusion.py  spotgeo_res_pretrained.py
src/optimizers/: __init__.py  config.py
src/postprocessing/: __init__.py  heatmap_to_coords.py
src/schedulers/: __init__.py
src/training/: __init__.py  trainer.py  trainer_singleframe.py
src/transforms/: __init__.py  base.py  factory.py  image.py  sequence.py
src/utils/: __init__.py  config.py  evaluator.py  experiment.py  logger.py  visualizer.py
tests/: __init__.py  conftest.py  test_datasets.py  test_model_structure.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/test_data/empty_sequence_1838275429280/: empty_anno.json
tests/test_data/spotgeov2/: empty_anno.json
tests/test_data/spotgeov2_1838275182208/: test_anno.json
tests/unit/: __init__.py  test_trainer.py
tests/unit/test_datasets/: __init__.py  test_spotgeov2.py
tests/unit/test_models/: test_base.py  test_spotgeo.py
tests/unit/test_transforms/: __init__.py  test_transforms.py
tests/utils/: __init__.py
tests/visualize_single_metric/: test_single_metric_plot.py
